# Agent-Foundry

./: .gitignore  .pre-commit-config.yaml  CLUSTER_SETUP.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MERGE_AGENT.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  README_CLUSTER.md  SECURITY.md  TEST_SYSTEM.sh  demo.py  demo_auto.py  docker-compose.yml  pyproject.toml  setup.sh  setup_dev.sh  start_backend.sh  test_api.py
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml
backend/: .dockerignore  .env.example  Dockerfile  config.py  main.py  requirements.txt
backend/agents/: __init__.py  base_agent.py  infrastructure_agent.py  merge_agent.py  orchestrator.py  prompts.py  specialized_agents.py  worker_pool.py
backend/demos/: __init__.py  merge_agent_demo.py  simple_demo.py
backend/integrations/: __init__.py  fastino.py  raindrop.py  sponsors.py
backend/models/: database.py  evolution.py  init_db.py
backend/routers/: agents.py  cluster.py  deployment.py  evolution.py  merge.py  metrics.py  ws.py
backend/services/: sandbox.py
backend/sql/: init.sql
backend/tests/: __init__.py  conftest.py  test_config.py  test_database.py  test_integrations.py  test_merge_agent.py
backend/trading/: __init__.py  core.py  trading_system.py
backend/trading/alpha_models/: __init__.py  base.py  ensemble.py  mean_reversion.py  momentum.py  volatility.py
backend/trading/data/: __init__.py
backend/trading/execution/: __init__.py  algorithms.py  engine.py  slippage.py
backend/trading/features/: __init__.py  calculators.py  engine.py
backend/trading/monitoring/: __init__.py  drift.py  learning.py  tracker.py
backend/trading/risk/: __init__.py  portfolio.py  position_sizer.py  risk_manager.py
backend/trading/tests/: __init__.py  test_alpha_models.py  test_risk.py
docs/: ARCHITECTURE.md  EXAMPLES.md  MERGE_AGENT.md  SETUP.md  TRADING_ARCHITECTURE.md
frontend/: .dockerignore  .env.example  Dockerfile  package.json
frontend/app/: globals.css  layout.tsx  page.module.css  page.tsx
frontend/app/cluster/: page.tsx
frontend/components/: ClusterDashboard.tsx  Dashboard.module.css  Dashboard.tsx  EvolutionTree.module.css  EvolutionTree.tsx  MetricsPanel.module.css  MetricsPanel.tsx  PipelineManager.module.css  PipelineManager.tsx
